Should fix spacing for list in courses

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1349,7 +1349,8 @@ footer{
         }
       }
       ul{
-        padding-left: 15px;
+		padding-left: 15px;
+		line-height: 1.5em;
         li{
           list-style-type: none;
           position: relative;
